--- a/app/src/main/res/values/estilos.xml
+++ b/app/src/main/res/values/estilos.xml
@@ -11,11 +11,11 @@
         <item name="android:textColorHint">@color/Negro_Fondo</item>
     </style>
     <!--Texto con letras más grandes-->
-    <style name="Texto_Negro.H1" parent="Texto_Negro">
+    <style name="Texto_Negro.H1">
         <item name="android:textSize">36sp</item>
     </style>
 
-    <style name="Texto_Negro.H2" parent="Texto_Negro">
+    <style name="Texto_Negro.H2">
         <item name="android:textSize">30sp</item>
     </style>
     <!--Botones de la app-->
